<resources>
    <string name="app_name">Oxyfun1</string>
    <string name="newReadinButton">Neue Messung</string>
    <string name="startEntryListButton">Aktivitäten anzeigen</string>
    <string name="startSettingsButton">Einstellungen</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="connect_sensor">Suche Sensor</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="new_measurement">Neue Messung</string>
    <string name="go_home">Home</string>
    <string name="add_measurement">Add Measurement</string>
    <string name="view_measurement">View Measurement</string>
    <string name="load_data">Dateien laden</string>
    <string-array name="data">
        <item>entry1</item>
        <item>entry2</item>
    </string-array>
</resources>
