<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_to_home"
        android:title="@string/go_home"
        android:icon="@drawable/baseline_home_white_18dp"
        android:orderInCategory="1"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_to_add_measurement"
        android:title="@string/add_measurement"
        android:icon="@drawable/baseline_add_white_18dp"
        android:orderInCategory="2"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_to_view_measurement"
        android:title="@string/view_measurement"
        android:icon="@drawable/baseline_folder_white_18dp"
        android:orderInCategory="3"
        app:showAsAction="ifRoom" />
</menu>