<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
<include
    layout="@layout/toolbar"
    android:id="@+id/toolbar" />


    <Button
        android:id="@+id/xclButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:text="Lade Datei"
        android:textSize="40sp"
        android:onClick="onstartXCL"
        app:layout_constraintBottom_toTopOf="@+id/startEntryListButton"
        app:layout_constraintEnd_toEndOf="@+id/startEntryListButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/startEntryListButton" />


    <Button
        android:id="@+id/startReadingButton"
        android:layout_width="0dp"
        android:layout_height="71dp"


        android:layout_marginBottom="72dp"

        android:background="@drawable/buttondesign"
        android:fontFamily="@font/fonttype"
        android:onClick="onstartReadingButtonClick"
        android:text="@string/newReadinButton"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/startEntryListButton"
        app:layout_constraintEnd_toEndOf="@+id/startEntryListButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/startEntryListButton" />

    <Button
        android:id="@+id/startEntryListButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startEntryListButton"
        android:fontFamily="@font/fonttype"
        android:textSize="60sp"
        android:onClick="onstartEntryListButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/buttondesign"/>

    <Button
        android:id="@+id/startSettingsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:background="@drawable/buttondesign"
        android:fontFamily="@font/fonttype"
        android:text="@string/startSettingsButton"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="@+id/startEntryListButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/startEntryListButton"
        app:layout_constraintTop_toBottomOf="@+id/startEntryListButton" />

    <Button
        android:id="@+id/graphButton"
        android:layout_width="383dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onstartGraphViewButton"
        android:text="Zum Graphen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startSettingsButton" />


</android.support.constraint.ConstraintLayout>

